--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <body>
 <p>原图</p>
-<img id="myPhoto" src="testimg.jpg">
+<img id="myPhoto" src="img/testimg.jpg">
 <p>With me?</p>
 <canvas id="myCanvas">
 </canvas>
