--- a/index.html
+++ b/index.html
@@ -11,13 +11,17 @@
 <canvas id="myCanvas">
 </canvas>
 <br>
+<div class="gif-container">
+
+</div>
 <input type="file" id="inputFile">
 <p>
     支持截图粘贴，拖拽上传<br>
     注意：不支持QQ直接右键复制后粘贴
 </p>
 </body>
-
+<script src="js/lib/gif.js"></script>
+<script src="js/gif-decode.js"></script>
 <script src="js/img-upload.js"></script>
 <script src="js/index.js"></script>
 
