--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 <p>原图</p>
 <img id="myPhoto" src="img/testimg.jpg">
 <p>With me?</p>
-<canvas id="myCanvas">
-</canvas>
+<img id="resultImg" src="">
 <br>
 <div class="gif-container">
 
@@ -23,6 +22,7 @@
 <script src="js/lib/gif.js"></script>
 <script src="js/gif-decode.js"></script>
 <script src="js/img-upload.js"></script>
+<script src="js/image-dispose.js"></script>
 <script src="js/index.js"></script>
 
 </html>
