--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+    <style>
+        .github-widget {
+            width: 500px;
+        }
+    </style>
 </head>
 
 <body>
@@ -24,5 +28,8 @@
 <script src="js/img-upload.js"></script>
 <script src="js/image-dispose.js"></script>
 <script src="js/index.js"></script>
+
+<div class="github-widget" data-repo="fzred/excuse-me"></div>
+<script src="http://git.hust.cc/GitHub-Repo-Widget.js/GithubRepoWidget.js"></script>
 
 </html>
