--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 <p>原图</p>
-<img id="myPhoto" src="img/testimg.jpg">
+<img id="originalImg" src="img/testimg.jpg">
 <p>With me?</p>
 <img id="resultImg" src="">
 <br>
