--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <input type="file" id="inputFile">
 <p>
     支持截图粘贴，拖拽上传<br>
-    注意：不支持QQ直接右键复制后粘贴
+    注意：不支持QQ直接右键复制后粘贴，可以从聊天界面拖拽上传
 </p>
 </body>
 <script src="js/lib/gif.js"></script>
